# astromesh-demo

./: .gitignore  README.md  go.mod  go.sum  install.sh  start-docker.sh  start.sh
chain/.fluxd/config/: app.toml  config.toml  node_key.json  priv_validator_key.json
chain/.fluxd/config/gentx/: gentx-2fcf8abf371c5e3f77adbe9103efb62859c7efc6.json
chain/.fluxd/keyring-file/: genesis.info  keyhash  localkey.info  ocrfeedadmin.info  signer1.info  signer2.info  signer3.info  signer4.info  signer5.info  user1.info  user2.info  user3.info  user4.info  wasm.info
chain/libs/evmone/arm64/: libevmone.dylib
examples/cross_vm/deploy/: deploy.go
examples/cross_vm/evm_setter/source/: evmSetter.sol
examples/cross_vm/execute/: evm_calls_svm.go  evm_to_svm.go  svm_to_evm.go
examples/cross_vm/svm_setter/source/: Anchor.toml
examples/cross_vm/svm_setter/source/programs/setter/: Cargo.toml
examples/cross_vm/svm_setter/source/programs/setter/src/: lib.rs
examples/cross_vm/svm_setter/source/tests/: demos.ts
examples/evm/: counter.sol
examples/evm/AstroTransfer/: example.go
examples/evm/astro_transfer/: example.go
examples/evm/deploy/: deploy.go
examples/evm/execute/: execute.go
examples/evm/query/: query.go
examples/svm/AstroTransfer/: example.go
examples/svm/astro_transfer/: example.go
examples/svm/counter_program/: lib.rs
examples/svm/deploy/: deploy.go
examples/svm/execute/: execute.go
examples/svm/query/: query.go
